--- a/admin.css
+++ b/admin.css
@@ -375,6 +375,10 @@ ul{
     grid-template-columns: 1fr;
     gap: 20px;
   }
+
+  .ul {
+    display: none;
+  }
   
   .verification-divider {
     transform: rotate(90deg);
